--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,8 +14,9 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react-jsx"
+    "jsx": "react-jsx",
+    "types": ["vitest/globals"]
   },
-  "include": ["src", "./vitest-setup.ts"],
+  "include": ["src", "./vite.config.ts","./vitest-setup.ts"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
