--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "test:ui": "vitest --ui"
   },
   "dependencies": {
+    "@testing-library/dom": "^9.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@testing-library/react": "^14.0.0",
+    "@testing-library/user-event": "^14.4.3",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@vitejs/plugin-react": "^3.1.0",
