--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite --port 3000 --open",
+    "dev": "vite --port 3000 --open --host",
     "build": "tsc && vite build",
     "preview": "vite preview",
     "test": "vitest",
@@ -29,6 +29,7 @@
     "jsdom": "^21.1.1",
     "typescript": "^4.9.3",
     "vite": "^4.2.0",
+    "vite-plugin-qrcode": "^0.2.1",
     "vitest": "^0.29.7",
     "vitest-dom": "^0.0.4"
   }
