--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "typescript": "^4.9.3",
     "vite": "^4.2.0",
     "vite-plugin-qrcode": "^0.2.1",
+    "vite-plugin-tips": "^2.1.0",
     "vitest": "^0.29.7",
     "vitest-dom": "^0.0.4"
   }
