--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@types/testing-library__jest-dom": "^5.14.5",
     "@vitejs/plugin-react": "^3.1.0",
     "jsdom": "^21.1.1",
+    "msw": "^1.2.1",
     "typescript": "^4.9.3",
     "vite": "^4.2.0",
     "vite-plugin-qrcode": "^0.2.1",
