--- a/package.json
+++ b/package.json
@@ -34,5 +34,8 @@
     "vite-plugin-tips": "^2.1.0",
     "vitest": "^0.29.7",
     "vitest-dom": "^0.0.4"
+  },
+  "msw": {
+    "workerDirectory": "public"
   }
 }
