--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "@typescript-eslint/eslint-plugin": "^5.43.0",
     "@typescript-eslint/parser": "^5.59.8",
     "@vitejs/plugin-react": "^3.1.0",
+    "@vitest/ui": "^0.31.4",
     "eslint": "^8.0.1",
     "eslint-config-prettier": "^8.8.0",
     "eslint-config-standard-with-typescript": "^34.0.1",
@@ -72,7 +73,7 @@
     "vite": "^4.2.0",
     "vite-plugin-qrcode": "^0.2.1",
     "vite-plugin-tips": "^2.1.0",
-    "vitest": "^0.29.7",
+    "vitest": "^0.31.4",
     "vitest-dom": "^0.0.4"
   },
   "msw": {
