--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,6 +17,12 @@
     "jsx": "react-jsx",
     "types": ["vitest/globals"]
   },
-  "include": ["src/*", "./vite.config.ts","./vitest-setup.ts"],
+  "include": [
+    "src/**/*",
+    "vite.config.ts",
+    "vitest.setup.ts",
+    "playwright.config.ts"
+  ],
+  "exclude": ["src/assets/*"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
