--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "vite-react-ts",
   "private": true,
-  "version": "0.0.0",
+  "version": "0.0.1",
   "type": "module",
   "scripts": {
     "dev": "vite --port 3000 --open --host",
@@ -9,7 +9,33 @@
     "preview": "vite preview",
     "test": "vitest",
     "coverage": "vitest run --coverage",
-    "test:ui": "vitest --ui"
+    "test:ui": "vitest --ui",
+    "test:pw": "npx playwright test --project=chromium --workers=1",
+    "test:pw-report": "npx playwright show-report",
+    "lint": "npx eslint src/",
+    "lint:fix": "npx eslint --fix src/**/*",
+    "prepare": "husky install",
+    "lint-staged": "lint-staged --quiet",
+    "pretty-quick": "pretty-quick --staged",
+    "prettier-format-all": "npx prettier --config .prettierrc \"src/**/*.(ts|tsx)\" --write"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   },
   "dependencies": {
     "axios": "^1.3.4",
@@ -17,6 +43,7 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@playwright/test": "^1.33.0",
     "@testing-library/dom": "^9.2.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
@@ -25,15 +52,29 @@
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@types/testing-library__jest-dom": "^5.14.5",
+    "@typescript-eslint/eslint-plugin": "^5.43.0",
+    "@typescript-eslint/parser": "^5.59.8",
     "@vitejs/plugin-react": "^3.1.0",
+    "@vitest/ui": "^0.31.4",
+    "eslint": "^8.0.1",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-config-standard-with-typescript": "^34.0.1",
+    "eslint-plugin-import": "^2.25.2",
+    "eslint-plugin-n": "^15.0.0",
+    "eslint-plugin-promise": "^6.0.0",
+    "eslint-plugin-react": "^7.32.2",
+    "husky": "^8.0.3",
     "jsdom": "^21.1.1",
+    "lint-staged": "^13.2.2",
     "msw": "^1.2.1",
+    "prettier": "^2.8.8",
+    "pretty-quick": "^3.1.3",
     "typescript": "^4.9.3",
     "vite": "^4.2.0",
     "vite-plugin-qrcode": "^0.2.1",
     "vite-plugin-tips": "^2.1.0",
-    "vitest": "^0.29.7",
-    "vitest-dom": "^0.0.4"
+    "vitest": "^0.31.4",
+    "vitest-dom": "^0.1.0"
   },
   "msw": {
     "workerDirectory": "public"
