--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,8 +15,18 @@
     "isolatedModules": true,
     "noEmit": true,
     "jsx": "react-jsx",
-    "types": ["vitest/globals"]
+    "types": [
+      "vitest/globals",
+      "vitest-dom/dist/matchers",
+      "vitest-dom/dist/extend-expect"
+    ]
   },
-  "include": ["src/*", "./vite.config.ts","./vitest-setup.ts"],
+  "include": [
+    "src/**/*",
+    "vite.config.ts",
+    "vitest.setup.ts",
+    "playwright.config.ts"
+  ],
+  "exclude": ["src/assets/*"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
